add responsive header with initial search

--- a/styles/abstracts/_variables.scss
+++ b/styles/abstracts/_variables.scss
@@ -1,21 +1,7 @@
-$mobile-spacing: 1rem;
-$tablet-spacing: 5%;
-$desktop-spacing: 5%;
+$primary-color: #058dfe;
+$secondary-color: #202121;
+$white: #ffffff;
+$primary-bg-color: #f4f7f6;
+$border-main: #e6eaea;
 
-
-$primary-color: #3278ff;
-$secondary-color: #9e9ea7;
-
-$primary-bg-color: #fcfcfc;
-$secondary-bg-color: #f1f3f4;
-
-
-$primary-text-color: #000;
-$secondary-text-color: #fff;
-$tertiary-text-color: #d0d2d4;
-
-
-$like-color: #ea4c89;
-
-
-$primary-font-family: 'Inter', sans-serif;
+$primary-font: "Apercu Pro", sans-serif, serif;
