--- a/styles/base/_resets.scss
+++ b/styles/base/_resets.scss
@@ -12,7 +12,7 @@ html {
 
 body {
     font-size: 1.6rem;
-    font-family: $primary-font-family;
+    font-family: $primary-font;
     background-color: $primary-bg-color;
     min-height: 100vh;
 }
