--- a/styles/modules/projects/Projects.module.scss
+++ b/styles/modules/projects/Projects.module.scss
@@ -14,4 +14,19 @@
     padding: 0 8%;
     grid-template-columns: repeat(3, 1fr);
   }
+  .load {
+    grid-column: 1 /-1;
+    background-color: $white;
+    padding: 1rem;
+    text-transform: uppercase;
+    font-size: 1.3rem;
+    cursor: pointer;
+    border: none;
+    color: rgba($secondary-color, 0.5);
+    transition: all 0.2s ease;
+    font-weight: 500;
+    &:hover {
+      color: $secondary-color;
+    }
+  }
 }
