--- a/styles/modules/projects/ProjectPreview.module.scss
+++ b/styles/modules/projects/ProjectPreview.module.scss
@@ -56,6 +56,19 @@
     .name {
       font-weight: bold;
     }
+    .tags {
+      display: flex;
+      flex-wrap: wrap;
+      gap: 1rem;
+      font-size: 1.2rem;
+      opacity: 0.5;
+      font-weight: bold;
+      color: lighten($secondary-color, 5%);
+      text-transform: uppercase;
+
+      .tag {
+      }
+    }
 
     .info {
       display: flex;
