--- a/styles/abstracts/_variables.scss
+++ b/styles/abstracts/_variables.scss
@@ -1,7 +1,11 @@
 $primary-color: #058dfe;
 $secondary-color: #202121;
-$white: #ffffff;
+$secondary-bg-color: #f1f3fa;
+
+$white: #fff;
 $primary-bg-color: #f4f7f6;
 $border-main: #e6eaea;
 
 $primary-font: "Apercu Pro", sans-serif, serif;
+
+//todo: modify white color
