--- a/styles/modules/projects/ProjectPreview.module.scss
+++ b/styles/modules/projects/ProjectPreview.module.scss
@@ -4,7 +4,7 @@
   display: flex;
   flex-direction: column;
   gap: 1rem;
-  background-color: $white;
+  background-color: $secondary-bg-color;
   padding-bottom: 2rem;
   .preview {
     height: 25rem;
