--- a/styles/modules/projects/Projects.module.scss
+++ b/styles/modules/projects/Projects.module.scss
@@ -16,7 +16,7 @@
   }
   .load {
     grid-column: 1 /-1;
-    background-color: $white;
+    background-color: $secondary-bg-color;
     padding: 1.2rem 1rem;
     text-transform: uppercase;
     font-size: 1.3rem;
