--- a/styles/modules/projects/project.module.scss
+++ b/styles/modules/projects/project.module.scss
@@ -1,125 +1,28 @@
 @use "~abstracts" as *;
 
 .project {
-  display: flex;
-  margin: 4rem 0;
-  flex-direction: column;
-  gap: 2rem;
-  @include tablet {
-    padding: 0 5rem;
-  }
-  @include desktop {
-    margin: 6rem 0;
-    padding: 0 15%;
-  }
-  .header {
-    display: flex;
-    justify-content: flex-end;
-    padding: 0 2rem;
-    @include tablet {
-      padding: 0;
-    }
-    .like {
-      padding: 0.5rem 1rem;
-      font-size: 1.4rem;
-      border-radius: 0.5rem;
-      cursor: pointer;
-      transition: all 0.2s ease;
-      border: 1px solid darken($border-main, 5%);
+}
 
-      &:hover {
-        color: $primary-color;
-        border-color: $primary-color;
-      }
+.header {
+  &Main {
+  }
+  .name {
+  }
+  &More {
+    .author {
+    }
+    .hire {
     }
   }
-  .main {
-    background-color: $white;
-    padding-bottom: 4rem;
-    .preview {
-      height: 25rem;
-      position: relative;
-      object-fit: cover;
-      @include tablet {
-        height: 35rem;
-      }
-      @include desktop {
-        height: 50rem;
-      }
-      img {
-        @include size(100%);
-        object-fit: cover;
-      }
+  .likes {
+  }
+}
 
-      .link {
-        border: 1px solid $white;
-        position: absolute;
-        transition: all 0.2s ease;
-        bottom: 1rem;
-        border-radius: 50%;
-        opacity: 0.5;
-        font-size: 2rem;
-        padding: 1rem;
-        display: flex;
-        align-items: center;
-        justify-content: center;
-        color: $white;
-        right: 1rem;
-
-        @include desktop {
-          opacity: 0;
-        }
-
-        &:hover {
-          opacity: 1;
-        }
-      }
-
-      &:hover {
-        .link {
-          opacity: 0.5;
-        }
-      }
-    }
-    .info {
-      display: flex;
-      flex-direction: column;
-      gap: 1rem;
-      margin-top: 2rem;
-      padding: 0 2rem;
-      .author {
-        display: flex;
-        gap: 0.5rem;
-        a {
-          font-weight: bold;
-          text-transform: capitalize;
-        }
-      }
-      .description {
-        margin: 1rem 0;
-      }
-      .name {
-        font-size: 1.8rem;
-        font-weight: bold;
-      }
-
-      .tags {
-        display: flex;
-        flex-wrap: wrap;
-        gap: 1rem;
-        font-size: 1.2rem;
-        text-transform: uppercase;
-        color: $secondary-color;
-        font-weight: 500;
-
-        .tag {
-          transition: all 0.2s ease;
-          opacity: 0.5;
-          &:hover {
-            opacity: 1;
-          }
-        }
-      }
+.info {
+  .description {
+  }
+  .tech {
+    .name {
     }
   }
 }
