add ability to close popup when clicking outside on project page

--- a/styles/modules/projects/project.module.scss
+++ b/styles/modules/projects/project.module.scss
@@ -19,7 +19,7 @@
       height: 40rem;
     }
     @include desktop {
-      height: 100vh;
+      height: 55rem;
     }
     img {
       @include size(100%);
