--- a/styles/abstracts/_variables.scss
+++ b/styles/abstracts/_variables.scss
@@ -6,6 +6,8 @@ $white: #fff;
 $primary-bg-color: #f4f7f6;
 $border-main: #e6eaea;
 
+$error-color: #d14836;
+
 $primary-font: "Apercu Pro", sans-serif, serif;
 
 //todo: modify white color
