--- a/styles/modules/projects/Submit.module.scss
+++ b/styles/modules/projects/Submit.module.scss
@@ -117,7 +117,7 @@
       }
 
       &__error {
-        color: red;
+        color: $error-color;
       }
     }
   }
@@ -134,6 +134,36 @@
     &:hover {
       background-color: $primary-color;
       color: $white;
+    }
+  }
+  .controls {
+    display: flex;
+    flex-direction: column;
+    gap: 1rem;
+    @include tablet {
+      flex-direction: row;
+    }
+
+    &__cancel,
+    &__submit {
+      flex: 1;
+      padding: 1rem;
+      border: none;
+      text-align: center;
+      cursor: pointer;
+      background-color: $border-main;
+      font-size: 1.4rem;
+      text-transform: capitalize;
+      transition: all 0.2s ease;
+      &:hover {
+        background-color: $primary-color;
+        color: $white;
+      }
+    }
+    &__cancel {
+      &:hover {
+        background-color: darken($error-color, 10%);
+      }
     }
   }
 }
