add responsive jobs index page

--- a/styles/abstracts/_variables.scss
+++ b/styles/abstracts/_variables.scss
@@ -1,6 +1,6 @@
 $primary-color: #058dfe;
 $secondary-color: #202121;
-$secondary-bg-color: #f1f3fa;
+$secondary-bg-color: #fff;
 
 $white: #fff;
 $primary-bg-color: #f4f7f6;
