--- a/styles/modules/jobs/JobPreview.module.scss
+++ b/styles/modules/jobs/JobPreview.module.scss
@@ -7,6 +7,15 @@
   flex-direction: column;
   gap: 1rem;
   cursor: pointer;
+  .image {
+    @include size(3rem);
+    border-radius: 50%;
+    display: inline-block;
+    img {
+      @include size(100%);
+      border-radius: inherit;
+    }
+  }
   .header {
     display: flex;
     gap: 1rem;
