--- a/styles/modules/auth/AuthForm.module.scss
+++ b/styles/modules/auth/AuthForm.module.scss
@@ -68,6 +68,36 @@
             font-size: 1.4rem;
           }
         }
+        &Error {
+          border-color: $error-color;
+
+          label {
+            color: $error-color;
+          }
+        }
+        &Filled {
+          label {
+            top: -0.1rem;
+            left: 1rem;
+            opacity: 1;
+            font-size: 1.4rem;
+          }
+        }
+      }
+      .other {
+        display: flex;
+        justify-content: space-between;
+        margin-top: 1rem;
+        a {
+          margin-left: auto;
+          font-size: 1.3rem;
+          color: $primary-color;
+          text-transform: capitalize;
+          transition: all 0.2s ease;
+          &:hover {
+            color: darken($primary-color, 10%);
+          }
+        }
       }
     }
 
@@ -86,7 +116,7 @@
       }
     }
 
-    .other {
+    .footer {
       font-size: 1.4rem;
 
       a {
