--- a/styles/modules/jobs/Jobs.module.scss
+++ b/styles/modules/jobs/Jobs.module.scss
@@ -8,11 +8,11 @@
   padding: 0 1rem;
   @include tablet {
     padding: 0 5%;
-    margin-top: 4rem;
+    margin: 4rem 0;
     gap: 3rem;
   }
   @include desktop {
-    margin-top: 8rem;
+    margin: 6rem 0;
     padding: 0 10%;
   }
   .list {
@@ -37,6 +37,10 @@
     cursor: pointer;
     &:hover {
       color: $secondary-color;
+    }
+    @include desktop {
+      width: 50%;
+      margin: 0 auto;
     }
   }
 }
