--- a/styles/modules/projects/ProjectPreview.module.scss
+++ b/styles/modules/projects/ProjectPreview.module.scss
@@ -15,13 +15,15 @@
       height: 22rem;
     }
     @include extra-lg-desktop {
-      height: 26rem;
+      height: 24rem;
     }
-
-    img {
+    .img {
       @include size(100%);
-      object-fit: cover;
-      transition: all 0.3s ease;
+      img {
+        @include size(100%);
+        object-fit: cover;
+        transition: all 0.3s ease;
+      }
     }
 
     .link {
