--- a/styles/modules/Profile.module.scss
+++ b/styles/modules/Profile.module.scss
@@ -122,12 +122,14 @@
       padding: 0 5%;
       margin: 4rem 0;
     }
+    @include desktop {
+      gap: 4rem;
+    }
     .sections {
       display: flex;
       text-transform: capitalize;
       font-weight: bold;
       .section {
-        cursor: pointer;
       }
     }
     .placeholder {
