add recruiter profile page and rename slug on students profile page

--- a/styles/modules/Profile.module.scss
+++ b/styles/modules/Profile.module.scss
@@ -127,6 +127,7 @@
       }
     }
     .placeholder {
+      grid-column: 1 / -1;
       text-align: center;
       margin: 2rem 0;
       opacity: 0.5;
