--- a/styles/modules/projects/ProjectPreview.module.scss
+++ b/styles/modules/projects/ProjectPreview.module.scss
@@ -7,6 +7,7 @@
   background-color: $secondary-bg-color;
   padding-bottom: 2rem;
   .preview {
+    user-select: none;
     height: 25rem;
     position: relative;
     overflow: hidden;
@@ -104,7 +105,7 @@
       }
 
       &Name {
-        font-size: 1.4rem;
+        font-size: 1.2rem;
         font-weight: bold;
 
         span {
@@ -128,5 +129,17 @@
         }
       }
     }
+  }
+}
+
+.dropdown {
+  position: absolute;
+  top: 1rem;
+  right: 1rem;
+  z-index: 2;
+  padding: 0.3rem 0.6rem;
+  .control {
+    cursor: pointer;
+    color: $white;
   }
 }
