--- a/styles/modules/jobs/JobPreview.module.scss
+++ b/styles/modules/jobs/JobPreview.module.scss
@@ -1,5 +1,8 @@
 @use "~abstracts" as *;
 
+.container {
+  position: relative;
+}
 .preview {
   background-color: $white;
   padding: 3rem 2rem;
@@ -7,6 +10,10 @@
   flex-direction: column;
   gap: 1rem;
   cursor: pointer;
+  transition: all 0.2s ease;
+  &:hover {
+    background-color: rgba($secondary-bg-color, 0.8);
+  }
   .image {
     @include size(3rem);
     border-radius: 50%;
@@ -52,5 +59,20 @@
     &:hover {
       opacity: 1;
     }
+  }
+}
+
+.dropdown {
+  position: absolute;
+  top: 1rem;
+  right: 1rem;
+  z-index: 2;
+  padding: 0.3rem 0.6rem;
+  .control {
+    cursor: pointer;
+    color: $secondary-color;
+  }
+  &List {
+    box-shadow: 0 0 0.3rem rgba($secondary-color, 0.2);
   }
 }
