refactor profile pages to be view only, add user profile page and edit profile page with form

--- a/styles/abstracts/_variables.scss
+++ b/styles/abstracts/_variables.scss
@@ -4,7 +4,8 @@ $secondary-bg-color: #fff;
 
 $white: #fff;
 $primary-bg-color: #f4f7f6;
-$secondary-bg-color: #e6eaea;
+$teritary-bg-color: #e6eaea;
+
 $border-main: #e6eaea;
 
 $error-color: #d14836;
