--- a/styles/modules/jobs/JobPreview.module.scss
+++ b/styles/modules/jobs/JobPreview.module.scss
@@ -12,7 +12,7 @@
   cursor: pointer;
   transition: all 0.2s ease;
   &:hover {
-    background-color: rgba($secondary-bg-color, 0.8);
+    background-color: rgba($teritary-bg-color, 0.8);
   }
   .image {
     @include size(3rem);
