add fonts caching, types for Job/Project/User and adjust styling for DynamicForm

--- a/styles/base/_resets.scss
+++ b/styles/base/_resets.scss
@@ -17,6 +17,7 @@ body {
   font-family: $primary-font;
   background-color: $primary-bg-color;
   min-height: 100vh;
+  color: $secondary-color;
 }
 #__next {
   min-height: 100vh;
