add max length to fields on JobForm

--- a/styles/base/_resets.scss
+++ b/styles/base/_resets.scss
@@ -19,6 +19,10 @@ body {
   min-height: 100vh;
   color: $secondary-color;
 }
+
+.trumbowyg-box{
+  margin: 0;
+}
 #__next {
   min-height: 100vh;
 }
