allow students and recruiter to sign up and adjust styling on AuthForm

--- a/styles/abstracts/_variables.scss
+++ b/styles/abstracts/_variables.scss
@@ -13,3 +13,5 @@ $error-color: #d14836;
 $primary-font: "Apercu Pro", sans-serif, serif;
 
 //todo: modify white color
+
+$primary-color-hover: darken($primary-color, 5%);
