--- a/styles/modules/Form.module.scss
+++ b/styles/modules/Form.module.scss
@@ -199,7 +199,7 @@
       background-color: lighten($primary-color, 5%);
       color: $white;
       &:hover {
-        background-color: darken($primary-color, 5%);
+        background-color: $primary-color-hover;
       }
     }
     &__cancel {
