--- a/styles/modules/projects/Projects.module.scss
+++ b/styles/modules/projects/Projects.module.scss
@@ -4,6 +4,7 @@
   margin: 4rem 0;
   display: grid;
   gap: 4rem;
+  padding: 0 2rem;
   @include tablet {
     padding: 0 5rem;
     grid-template-columns: repeat(2, 1fr);
