refactor dummy data to a file, and adjust project and job related components and pages to new shape, with style adjustments

--- a/styles/modules/auth/RegisterIntro.module.scss
+++ b/styles/modules/auth/RegisterIntro.module.scss
@@ -28,6 +28,9 @@ $border: darken($border-main, 15%);
     padding: 3rem 4rem;
     margin: 6rem auto;
   }
+  @include extra-lg-desktop {
+    width: 35%;
+  }
   .header {
     text-align: center;
   }
