--- a/styles/modules/jobs/JobPreview.module.scss
+++ b/styles/modules/jobs/JobPreview.module.scss
@@ -1,16 +1,16 @@
 @use "~abstracts" as *;
 
 .container {
-  position: relative;
 }
 .preview {
   background-color: $white;
-  padding: 3rem 2rem;
+  padding: 3rem;
   display: flex;
   flex-direction: column;
-  gap: 1rem;
+  gap: 1.3rem;
   cursor: pointer;
   transition: all 0.2s ease;
+  height: 100%;
   &:hover {
     background-color: rgba($teritary-bg-color, 0.8);
   }
@@ -29,6 +29,10 @@
     align-items: center;
     .location {
       font-size: 1.4rem;
+      opacity: 0.8;
+      &:first-letter {
+        text-transform: uppercase;
+      }
     }
     .remote {
       padding: 0.5rem;
@@ -45,19 +49,21 @@
   }
   .company {
     color: $primary-color;
-    font-size: 1.4rem;
+    font-size: 1.3rem;
   }
   .description {
     font-size: 1.4rem;
     margin-bottom: auto;
+    font-weight: 300;
   }
   .other {
-    text-align: right;
     font-size: 1.2rem;
-    opacity: 0.5;
+    opacity: 0.7;
     transition: all 0.2s ease;
-    &:hover {
-      opacity: 1;
+    display: flex;
+    justify-content: space-between;
+    .category {
+      text-transform: capitalize;
     }
   }
 }
