--- a/styles/modules/projects/project.module.scss
+++ b/styles/modules/projects/project.module.scss
@@ -123,7 +123,7 @@
     display: flex;
     align-items: flex-start;
     gap: 1rem;
-    span {
+    .btn {
       padding: 0.8rem 1rem;
       width: 4rem;
       border-radius: 0.5rem;
