add auto schema generation on Auth form

--- a/styles/modules/auth/AuthForm.module.scss
+++ b/styles/modules/auth/AuthForm.module.scss
@@ -111,6 +111,13 @@
             color: $primary-color-hover;
           }
         }
+        .error {
+          font-size: 1.4rem;
+          color: $error-color;
+          &:first-letter {
+            text-transform: capitalize;
+          }
+        }
       }
     }
 
