connect projects page with api with infinite pagination

--- a/styles/modules/projects/ProjectPreview.module.scss
+++ b/styles/modules/projects/ProjectPreview.module.scss
@@ -16,6 +16,7 @@
       height: 22rem;
     }
     .img {
+      background-color: $border-main;
       @include size(100%);
       img {
         @include size(100%);
