add filtering logic to interact with router

--- a/styles/modules/Filters.module.scss
+++ b/styles/modules/Filters.module.scss
@@ -115,7 +115,8 @@
       font-weight: 500;
       transition: all 0.2s ease;
 
-      &:hover {
+      &:hover,
+      &Active {
         color: $primary-color;
         border-color: $primary-color;
       }
