--- a/styles/modules/projects/Projects.module.scss
+++ b/styles/modules/projects/Projects.module.scss
@@ -19,6 +19,13 @@
     gap: 2rem;
     grid-template-columns: repeat(4, 1fr);
   }
+  .placeholder {
+    text-transform: uppercase;
+    grid-column: 1 / -1;
+    opacity: 0.4;
+    text-align: center;
+    font-weight: bold;
+  }
   .load {
     grid-column: 1 /-1;
     background-color: $secondary-bg-color;
